--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "core-js": "^3.16.1",
-    "d3": "^7.0.0"
+    "d3": "^7.0.0",
+    "express": "^4.17.1",
+    "jdenticon": "^3.1.1"
   }
 }
